--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -10,11 +10,11 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">URL</span>
-          <input type="text" ng-model="loginData.username">
+          <input type="text" ng-model="loginData.url">
         </label>
         <label class="item item-input">
           <span class="input-label">API Key</span>
-          <input type="password" ng-model="loginData.password">
+          <input type="password" ng-model="loginData.apikey">
         </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit">Log in</button>
