--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,11 +21,11 @@
         <ion-item menu-close ng-click="login()" ng-show="!loggedIn">
           Login
         </ion-item>
-        <ion-item menu-close href="#/app/shorten" ng-hide="!loggedIn">
-          Shorten
+        <ion-item menu-close href="#/app/lookup" ng-hide="!loggedIn">
+          Lookup
         </ion-item>
-        <ion-item menu-close href="#/app/urls" ng-hide="!loggedIn">
-          URLs
+        <ion-item menu-close href="#/app/shorten" ng-hide="!loggedIn">
+          Shoten
         </ion-item>
         <ion-item menu-close href="#/app/settings" ng-hide="!loggedIn">
           Settings
